<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Login">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="#FFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@drawable/edittext_bg_2"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_email_black_24dp" />

        <EditText
            android:id="@+id/email_login_id"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="1dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@drawable/edittext_bg_2"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_lock_black_24dp" />

        <EditText
            android:id="@+id/pass_login_id"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="1dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />
    </LinearLayout>

    <Button
        android:id="@+id/signup_btn_id"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/clickable_bg"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_button"
        style="@style/FacebookLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="24dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/no_account_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/no_account_yet"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sign_up_now_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up_now"
            android:textColor="#009688"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>